--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ numpy== 1.26.4
 pandas==2.2.2
 matplotlib==3.9.0
 seaborn==0.13.2
-opencv-python==4.10.0.84
+opencv-python-headless==4.9.0.80
 streamlit==1.37.1
